--- a/inst/NEWS
+++ b/inst/NEWS
@@ -3,6 +3,20 @@ NEWS                                                    R Documentation
 micromap News
 
 
+CHANGES IN micromap VERSION 1.6 (Released 2013-05-31)
+
+NEW FEATURES
+
+         • Renamed the statesShapefile dataset to USstates.
+
+         • Created a list of variables that are defined globally when
+           the check tool is applied to the package.
+
+BUG FIXES
+
+         • None.
+
+
 CHANGES IN micromap VERSION 1.5 (Released 2012-12-18)
 
 NEW FEATURES
@@ -12,4 +26,3 @@ NEW FEATURES
 BUG FIXES
 
          • None.
-
